--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "**/*": "prettier --write --ignore-unknown"
   },
   "dependencies": {
+    "@readyplayerme/visage": "^5.1.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "framer-motion": "^11.0.3",
