--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "mongoose": "^8.1.2",
     "next": "14.1.0",
     "next-themes": "^0.2.1",
+    "nodemailer": "^6.9.13",
     "react": "^18",
     "react-dom": "^18",
-    "react-shimmer-effects": "^1.0.3"
+    "react-shimmer-effects": "^1.0.3",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "@types/node": "^20",
