--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,8 +26,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "app/(backend)/utils/databse.js",
-    "utils/mailService.js"
+    "utils/ApiResponse.ts"
   ],
   "exclude": ["node_modules"]
 }
