--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
-  "type": "commonjs",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -14,6 +13,7 @@
     "**/*": "prettier --write --ignore-unknown"
   },
   "dependencies": {
+    "@ducanh2912/next-pwa": "^10.2.7",
     "@readyplayerme/visage": "^5.1.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
